[package]
name = "joinery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["peg/trace"]

[dependencies]
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
codespan-reporting = "0.11.1"
csv = "1.2.2"
glob = "0.3.1"
joinery_macros = { path = "joinery_macros" }
once_cell = "1.18.0"
peg = "0.8.1"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.0"
rusqlite = { version = "0.29.0", features = ["bundled", "functions", "vtab"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
cli_test_dir = "0.1.5"

[workspace]
members = ["joinery_macros"]
